@startuml PersonalNetWorthDashboard_ClassDiagram

package "Assets" {
  class Asset {
    +Guid Id
    +AssetType Type
    +decimal CurrentValue
    +string Currency
    +string Category
  }

  enum AssetType {
    BankAccount
    Investment
    Property
    Vehicle
  }
}

package "Liabilities" {
  class Liability {
    +Guid Id
    +LiabilityType Type
    +decimal PrincipalAmount
    +decimal CurrentBalance
    +decimal InterestRate
    +string Creditor
  }

  enum LiabilityType {
    Mortgage
    CarLoan
    StudentLoan
    CreditCard
  }
}

package "Net Worth" {
  class NetWorth {
    +decimal TotalAssets
    +decimal TotalLiabilities
    +decimal NetWorthAmount
    +DateTime CalculationTimestamp
  }
}

package "Investments" {
  class InvestmentPosition {
    +Guid Id
    +string TickerSymbol
    +decimal Quantity
    +decimal PurchasePrice
    +decimal CurrentPrice
    +string AssetClass
  }
}

package "Account Integration" {
  class LinkedAccount {
    +Guid Id
    +string InstitutionName
    +string AccountType
    +DateTime LinkDate
    +bool AutoSyncEnabled
    +SyncStatus LastSyncStatus
  }
}

Asset "0..*" -- "1" NetWorth
Liability "0..*" -- "1" NetWorth
Asset "0..1" -- "0..1" LinkedAccount
InvestmentPosition "0..*" -- "1" Asset

@enduml
